--- a/config/testsWordslang.cfg
+++ b/config/testsWordslang.cfg
@@ -1,10 +1,10 @@
 [source]
-#source_path = <source path for the data here>
 source_path = baseData
 en_plain = en-gb.csv
 en_normalised = normalisationdict.csv
 en_slang = slangdict.csv
 emoticons = emoticons.csv
+
 
 [error]
 verbose = True
@@ -12,14 +12,13 @@ write_out = True
 err_path = errorOutput
 err_file = wordslangErrors.txt
 
-#[url]
-# These were placeholders in case I wanted to remove
-# the url query parameters from the code.
-#token_query = token
-#slang_query = slang
-#word_exists = exists
-#phonetic_query = pho 
-#emoticon_query = emo
+
+[url]
+token_query = token
+slang_query = slang
+word_exists = exists
+phonetic_query = pho 
+emo_query = emo
 
 [backend]
 db = dictionary
@@ -34,6 +33,6 @@ collections = [{"collection":"wordslang",
 				"plain":["word", "pho", "slang"],
 				"compound":[]},
 		   	   
-		   	   {"collection":"emoticons",
+		   	   {"collection":"emoticon",
 		   	   "plain":["word", "emo"],
 		   	   "compound":[]}]
