Config changes and removal of tests

--- a/config/wordslang.cfg
+++ b/config/wordslang.cfg
@@ -23,10 +23,11 @@ err_file = wordslangErrors.txt
 
 [backend]
 db = dictionary
+# Port and host will get repopulated on the dotcloud side based on the environment.json and the setupapp.py script
 host = localhost
 port = 27017
-user = worker
-password = worker123
+user = <the username you want your auth to use - make 1 up>
+password = <the password you want your auth to use - make 1 up>
 drop_collection = True
 
 # This provided for collection and index building - see baseUtils
