--- a/config/wordslang.cfg
+++ b/config/wordslang.cfg
@@ -21,13 +21,16 @@ err_file = wordslangErrors.txt
 #phonetic_query = pho 
 #emoticon_query = emo
 
+[web]
+webStaticRoute = /home/dotcloud/code/static/
+
 [backend]
 db = dictionary
 # Port and host will get repopulated on the dotcloud side based on the environment.json and the setupapp.py script
 host = localhost
 port = 27017
-user = <the username you want your auth to use - make 1 up>
-password = <the password you want your auth to use - make 1 up>
+user = worker
+password = worker123
 drop_collection = True
 
 # This provided for collection and index building - see baseUtils
